--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,15 +5,11 @@
 
 
 body {
-background: rgba(8,86,117,1);
-background: -moz-linear-gradient(left, rgba(8,86,117,1) 0%, rgba(41,184,229,1) 0%, rgba(62,201,201,1) 100%);
-background: -webkit-gradient(left top, right top, color-stop(0%, rgba(8,86,117,1)), color-stop(0%, rgba(41,184,229,1)), color-stop(100%, rgba(62,201,201,1)));
-background: -webkit-linear-gradient(left, rgba(8,86,117,1) 0%, rgba(41,184,229,1) 0%, rgba(62,201,201,1) 100%);
-background: -o-linear-gradient(left, rgba(8,86,117,1) 0%, rgba(41,184,229,1) 0%, rgba(62,201,201,1) 100%);
-background: -ms-linear-gradient(left, rgba(8,86,117,1) 0%, rgba(41,184,229,1) 0%, rgba(62,201,201,1) 100%);
-background: linear-gradient(to right, rgba(8,86,117,1) 0%, rgba(41,184,229,1) 0%, rgba(62,201,201,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#085675', endColorstr='#3ec9c9', GradientType=1 );
 
-    
-    
+background: #f2f5f6; /* Old browsers */
+background: -moz-linear-gradient(left, #f2f5f6 0%, #e3eaed 37%, #c8d7dc 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left, #f2f5f6 0%,#e3eaed 37%,#c8d7dc 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right, #f2f5f6 0%,#e3eaed 37%,#c8d7dc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=1 ); /* IE6-9 */
+
 }
