checked syntax all correct

--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
     </head>
     <body>
-        <p>You have received a message from the site's contact form <%= "#{ @name }, #{ @email }," %></p>
+        <p>You have received a message from the site's contact form, from <%= "#{ @name }, #{ @email }," %></p>
         <p><%= @body %></p>
     </body>
-    
 </html>
