--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
         <h2 class="text-center">Basic Membership</h2>
         <h4>Sign up for free and get access to the community.</h4>
         <br/>
-        <%= link_to 'Sign Up with Basic', new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+        <%= link_to 'Sign Up with Basic', new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
       </div>
       
    </div>
@@ -16,7 +16,7 @@
       <div class="well">
          <h2 class="text-center">Pro Membership</h2>
          <h4>Sign up for pro account for $10/month and get access to the community and contact information !</h4>
-         <%= link_to 'Sign Up with Pro', new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+         <%= link_to 'Sign Up with Pro', new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
       </div>
       
    </div>
