--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  
+  <%= hidden_field_tag 'plan', params[:plan] %>
 
     <div class="field form-group">
       <%= f.label :email %><br />
@@ -37,6 +39,6 @@
     
 
     <div class="actions form-group">
-      <%= f.submit "Sign up", class: 'btn btn-success' %>
+      <%= f.submit "Sign up", class: 'btn btn-success', id: 'form_submit_btn' %>
     </div>
  <% end %>
