Added notice and styles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,3 +13,9 @@ background: linear-gradient(to right, #f2f5f6 0%,#e3eaed 37%,#c8d7dc 100%); /* W
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=1 ); /* IE6-9 */
 
 }
+
+.alert-notice {
+    color: #8A6D3B;
+    background-color: #FCF8E3;
+    border-color: #FAEBCC;
+}
