--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,8 @@
                <%= link_to "Edit your profile!", "#", class: 'btn btn-default btn-lg btn-block' %>
                <%= link_to "View your profile!", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
             <% else %>
-               <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+               <p>Create your profile so that you can share your information with the community.</p>
+               <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
             <% end %>
          </div>
       </div>
