--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -8,6 +8,10 @@
       <%= f.text_field :last_name, class: 'form-control' %>
     </div>
     <div class="form-group">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class: 'form-control' %>
+    </div>
+    <div class="form-group">
        <%= f.label :job_title %>
        <%= f.select :job_title, ['Developer', 'Entrepreneur', 'Investors'], {}, class: 'form-control' %>
     </div>
