--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-3">
-        <%= image_tag @user.profile.avatar.url, class: 'img-circle' %>
+        <%= image_tag @user.profile.avatar.url, class: 'user-show-avatar' %>
     </div>
     
     <div class="col-md-6">
