--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,9 @@
+/* Users Show Page Styles */
+.user-show-avatar{
+    height: 128px;
+    width: 128px;
+    
+}
 .job-title-icon {
     display: inline-block;
     width: 30px;
@@ -27,5 +33,16 @@
     background-color: #5bc0de;
     border-color: #46b8da;
    
+}
+
+/* Users Index Page Styles */
+
+.user-index-avatar{
+    border-radius: 50%;
+}
+
+.well.white-bg{
+    background-color: white;
+    
 }
     
