--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,26 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
         <ul class="list-unstyled">
-            <% @users.each do |u| %>
-                <% if u.profile %> 
+            <% @users.each do |user| %>
+                <% if user.profile %> 
                 <li>
                     <div class="well row <%= cycle('white-bg', '') %>">
                         <div class="col-sm-4 text-center">
-                            <% if u.profile.avatar %> 
-                                <%= link_to u do %>
-                                   <%= image_tag u.profile.avatar.url(:thumb), class: 'user-index-avatar' %> 
+                            <% if user.profile.avatar %> 
+                                <%= link_to user do %>
+                                   <%= image_tag user.profile.avatar.url(:thumb), class: 'user-index-avatar' %> 
                                 <% end %>
                             <% end %>
                         </div>
                         <div>
-                            <%= link_to u do %>
-                               <h2><%= u.profile.first_name %> <%= u.profile.last_name %></h2>
+                            <%= link_to user do %>
+                               <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
                             <% end %>
-                            <p><%= u.profile.job_title %></p>
+                            <p><%= user.profile.job_title %> 
+                            <% if user.plan_id == 2 %>
+                            <span class="label label-danger">PRO</span> 
+                            <% end %>
+                            </p>
                             
                         </div>
                     </div>
